<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  tools:visibility="visible"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:padding="24dp"
  android:visibility="gone">

  <ImageView
    android:id="@+id/emptyStateIcon"
    android:layout_width="120dp"
    android:layout_height="120dp"
    android:alpha="0.6"
    android:contentDescription="@string/favorite_events_icon"
    android:src="@drawable/ic_favorite_event"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintVertical_bias="0.4"
    app:tint="?attr/colorOnSurfaceVariant" />

  <!-- Title -->
  <TextView
    android:id="@+id/emptyStateTitle"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_marginTop="24dp"
    android:layout_marginHorizontal="@dimen/margin"
    android:gravity="center"
    android:maxWidth="280dp"
    android:text="@string/sorry_no_favorites_found"
    android:textAppearance="?attr/textAppearanceHeadlineSmall"
    android:textColor="?attr/colorOnSurface"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@id/emptyStateIcon" />

  <TextView
    android:id="@+id/emptyStateDescription"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_marginTop="8dp"
    android:gravity="center"
    android:lineSpacingExtra="4dp"
    android:layout_marginHorizontal="@dimen/margin"
    android:maxWidth="320dp"
    android:text="@string/add_events_to_your_favorites_firs"
    android:textAppearance="?attr/textAppearanceBodyMedium"
    android:textColor="?attr/colorOnSurfaceVariant"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@id/emptyStateTitle" />

</androidx.constraintlayout.widget.ConstraintLayout>